# gongjeon

./: Cargo.toml  config.json  todo.md
content/: aa.md  my-first-post.md  rust-tutorial.md  test.md
docs/: index.html  my-first-post.html  rust-tutorial.html
public/: aa.html  index.html  my-first-post.html  rust-tutorial.html  test.html
src/: lib.rs  main.rs  site_building.rs  templates.rs
templates/: hello.html  index_template.html  post_template.html
