[package]
name = "gongjeon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.8.0"
hotwatch = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
walkdir = "2"
axum = "0.2"
tower-http  = { version = "0.1", features = ["fs"] }
askama = "0.10"
regex = "1.7.0"
clap = { version = "4.0.29", features = ["derive"] }
serde_json = "1.0.89"
serde_derive = "1.0.148"
serde = "1.0.148"
inquire = "0.5.2"
